# register

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-24-register-package.md
docs/superpowers/specs/: 2026-04-24-register-design.md
register/: __init__.py  dimension.py  exception.py  parameter.py  register.py
tests/: conftest.py  test_dimension.py  test_exception.py  test_init.py  test_parameter.py  test_register.py
